# user-agent-parser

./: CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  UPGRADE_SUMMARY.md  advanced_benchmark.py  benchmark.py  benchmark_results.csv  benchmark_results.json  pyproject.toml  setup.py
.claude/skills/commit/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/pr-review/: SKILL.md
.claude/skills/review/: SKILL.md
.github/workflows/: main.yml
tests/: __init__.py  test_advanced_engine.py  test_user_agent_parser.py  test_utils.py
user_agent_parser/: __init__.py  advanced_engine.py  analytics.py  constants.py  modern_devices.py  parser.py  test.py
user_agent_parser/src/: parser.py
