[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "user-agent-parser"
version = "0.1.6"                                             # bump so PyPI re-indexes
description = "Python 3 library to parse User-Agent strings and detect browser, OS and device details"
authors = ["Purushot14 <prakash.purushoth@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Purushot14/user-agent-parser"
homepage = "https://github.com/Purushot14/user-agent-parser"

# ✍️ NEW — PyPI uses this list directly for search relevance
keywords = [
  "user agent",
  "user-agent parser",
  "ua parser",
  "browser detection",
  "device detection",
  "python",
  "http",
  "analytics"
]

packages = [{ include = "user_agent_parser" }]
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
]

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
pytest = "^8.2"
pytest-cov = "^5.0"

# --- unchanged lint / format config below ---
[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "C4", "SIM", "TCH", "ARG", "ERA"]
ignore = []
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["user_agent_parser"]
case-sensitive = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
